# tap-google-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  mypy.ini  pyproject.toml  tap-google-analytics.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml
tap_google_analytics/: __init__.py  client.py  error.py  quota_manager.py  tap.py
tap_google_analytics/defaults/: default_report_definition.json
tap_google_analytics/tests/: __init__.py  conftest.py  test_core.py  utilities.py
tests/: conftest.py  test_core.py  test_quota_management.py  utilities.py
