[tool.poetry]
name = "tap-google-analytics"
version = "0.0.5"
description = "`tap-google-analytics` is a Singer tap for GoogleAnalytics, built with the Meltano SDK for Singer Taps."
authors = ["Pat Nadolny"]
keywords = [
    "ELT",
    "GoogleAnalytics",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"  # Tested up to 3.11
singer-sdk = "^0.13.1"
google-api-python-client = "^2.64.0"
oauth2client = "4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
tox = "^3.25.0"
flake8 = "^5.0.4"
black = "^22.10"
pydocstyle = "^6.1.1"
mypy = "^0.982"
isort = "^5.10.1"
coverage = "^6.2"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_google_analytics"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-google-analytics = 'tap_google_analytics.tap:TapGoogleAnalytics.cli'
